Commit43_CongHung:Validate_All